--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="ISDI Coders La Serie">
+  <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
   <title>ISDI Coders: La Serie</title>
 </head>
 
 <body>
+  <header>
+    <h1>ISDI CODERS LA SERIE</h1>
+  </header>
+  <main>
+    <ul>
+      <li><a href="/season01.html" target="_blank">Temporada 1</a></li>
+      <li><a href="/season02.html" target="_blank">Temporada 2</a></li>
+      <li><a href="/season03.html" target="_blank">Temporada 3</a></li>
+      <li><a href="/season04.html" target="_blank">Temporada 4</a></li>
+      <li><a href="/season05.html" target="_blank">Temporada 5</a></li>
+      <li><a href="/season06.html" target="_blank">Temporada 6</a></li>
+      <li><a href="/season07.html" target="_blank">Temporada 7</a></li>
+      <li><a href="/season08.html" target="_blank">Temporada 8</a></li>
+      <li><a href="/season09.html" target="_blank">Temporada 9</a></li>
+      <li><a href="/season10.html" target="_blank">Temporada 10</a></li>
+      <li><a href="/season11.html" target="_blank">Temporada 11</a></li>
+    </ul>
+  </main>
+  <footer>&copy;Berti Coders</footer>
 
 </body>
 
