Add second chapter of season 1, and synopsis

--- a/season01.html
+++ b/season01.html
@@ -20,6 +20,13 @@
       Para lograrlo, tendrá que vérselas con el malvado banquero de su barrio.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 2: El material escolar</h2>
+    <p>
+      Después de superar la prueba de acceso, empieza el momento favorito de Berty, ir en busca
+      de todo el material para el cole. Se pasa el día cantando y bailando mientras recore el centro comercial.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
