Add third chapter to season 1, and synopsis

--- a/season01.html
+++ b/season01.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -25,6 +25,14 @@
     <p>
       Después de superar la prueba de acceso, empieza el momento favorito de Berty, ir en busca
       de todo el material para el cole. Se pasa el día cantando y bailando mientras recore el centro comercial.
+    </p>
+  </section>
+  <section>
+    <h2>Capítulo 3: No tengo portátil!!</h2>
+    <p>
+      A pocos días de empezar el cole, Berty se da cuenta que no tiene un cachivache llamado ordenador! Desesperada
+      acude a un Genio que le concede un ordenador a cambio de dos camellos. Encontrará Berty dos
+      camellos para dárselos al Genio?
     </p>
   </section>
   <h3><a href="index.html">Volver</a></h3>
