Add chapter two of season two

--- a/season02.html
+++ b/season02.html
@@ -21,6 +21,13 @@
       en la pierna que le dejó el camello después de propinarle una coz, la hace entrar en razón.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 2: Ábrete sesamo</h2>
+    <p>
+      Con la promesa de pizza y cerveza, Berty viaja hasta el cole, para hacer una visita guiada por el.
+      Conoce a compañeros muy majos, con los que sabe que podrá cantar y bailar más adelante.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
