Add chapter three of season two

--- a/season02.html
+++ b/season02.html
@@ -28,6 +28,13 @@
       Conoce a compañeros muy majos, con los que sabe que podrá cantar y bailar más adelante.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 3: La siesta</h2>
+    <p>
+      Con pesadillas sobre aviones, Berty intenta recuperar fuerzas antes de empezar el cole.
+      En este capítulo vemos a una futura estudiante reflexiva y marmota.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
