Add chapter two of season 3

--- a/season03.html
+++ b/season03.html
@@ -25,6 +25,17 @@
       escenarios.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 2: El club de Jazz</h2>
+    <p>
+      Un día, Alex se cruza con Mia, una carismática cantante de jazz con un pasado misterioso y un amor profundo por la
+      música. Juntos, deciden formar una banda y embarcarse en un viaje para competir en un prestigioso concurso
+      musical. A
+      medida que reclutan a otros músicos apasionados, como el brillante baterista Max y la virtuosa violinista Sophie,
+      la
+      banda comienza a encontrar su voz única y a descubrir la verdadera magia de la música.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
