Add chapter three of season three

--- a/season03.html
+++ b/season03.html
@@ -36,6 +36,18 @@
       banda comienza a encontrar su voz única y a descubrir la verdadera magia de la música.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 3: Le musicale</h2>
+    <p>
+      La película está llena de números musicales espectaculares que van desde el jazz hasta el pop y la música clásica,
+      cada
+      uno resaltando las habilidades únicas de los personajes y su evolución artística. A medida que la banda se prepara
+      para
+      el concurso, enfrentan desafíos tanto personales como musicales, incluyendo rivalidades, conflictos internos y la
+      lucha
+      contra el tiempo.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
