Add chapter 2 of season 4

--- a/season04.html
+++ b/season04.html
@@ -24,7 +24,18 @@
       tentación de investigar.
     </p>
   </section>
-
+  <section>
+    <h2>Capítulo 2: La grabasión</h2>
+    <p>
+      Emily llega a la Mansión Hawthorn con su cámara y equipo de grabación, decidida a descubrir la verdad detrás de
+      las
+      leyendas urbanas que rodean al lugar. Sin embargo, a medida que avanza la noche y explora los oscuros pasillos y
+      habitaciones de la mansión, se da cuenta de que no está sola. Extraños fenómenos paranormales comienzan a suceder
+      a su
+      alrededor, y una presencia malévola parece acecharla.
+    </p>
+  </section>
+  <h3><a href="index.html">Volver</a></h3>
 </body>
 
 </html>
