Add chapter 3 of season 4

--- a/season04.html
+++ b/season04.html
@@ -35,6 +35,16 @@
       alrededor, y una presencia malévola parece acecharla.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 3: Emily</h2>
+    <p>
+      A medida que Emily se adentra más en la mansión en busca de respuestas, descubre oscuros secretos enterrados en el
+      pasado de la familia Hawthorn. Con cada escalofriante revelación, la línea entre la realidad y la pesadilla se
+      desdibuja, y Emily se encuentra luchando por su vida contra fuerzas sobrenaturales que desean mantener los
+      secretos de
+      la mansión ocultos para siempre.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
