Add chapter 2 of season 5

--- a/season05.html
+++ b/season05.html
@@ -23,6 +23,18 @@
       con los sueños y la imaginación, y a menudo se encuentra perdida en historias mágicas que crea en su mente.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 2: Spark i Haigh</h2>
+    <p>
+      Un día, Emma descubre un misterioso libro antiguo en la biblioteca del pueblo. Este libro, llamado "El Libro de
+      los
+      Sueños", tiene el poder de hacer que los sueños cobren vida. Emma, junto con su fiel compañero, un simpático
+      dragón
+      llamado Spark, se embarcan en una emocionante aventura para proteger el libro de aquellos que desean usar su poder
+      para
+      fines oscuros.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
