Add chapter 3 of season 5

--- a/season05.html
+++ b/season05.html
@@ -35,6 +35,24 @@
       fines oscuros.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 3: La mágia</h2>
+    <p>
+      Durante su viaje, Emma conoce a personajes mágicos y entra en un mundo de fantasía lleno de criaturas asombrosas,
+      lugares mágicos y desafíos emocionantes. A medida que avanza la historia, Emma descubre que los sueños pueden ser
+      tanto
+      una fuente de poder como una responsabilidad, y debe aprender a usarlos sabiamente.
+
+      "El Reino de los Sueños" es una película que celebra la importancia de la imaginación, la amistad y la valentía. A
+      lo
+      largo de la película, Emma y Spark enfrentan obstáculos, pero también descubren su propio poder interior y la
+      belleza de
+      seguir sus sueños. Con un elenco de personajes carismáticos y canciones memorables, esta película de Disney te
+      sumergirá
+      en un mundo mágico que te recordará la importancia de nunca dejar de soñar.
+
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
