Add chapter 2 of season 6

--- a/season06.html
+++ b/season06.html
@@ -22,6 +22,18 @@
       personalidades únicas.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 2: La nieta de Rodolfo</h2>
+    <p>
+      El centro está dirigido por Clara, una cariñosa y enérgica directora, que siempre se esfuerza por hacer que la
+      vida en
+      la residencia sea lo más vibrante y significativa posible para sus residentes. A pesar de los desafíos de la
+      vejez, los
+      residentes encuentran consuelo y amistad entre ellos mientras comparten historias de sus vidas pasadas y forjan
+      nuevos
+      vínculos.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
