Add chapter 3 of season 6

--- a/season06.html
+++ b/season06.html
@@ -34,6 +34,18 @@
       vínculos.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 3: La esperanza</h2>
+    <p>
+      Cuando el Hogar de la Esperanza enfrenta la posibilidad de ser cerrado debido a problemas financieros, los
+      residentes se
+      unen para salvar su hogar. Juntos, emprenden una serie de aventuras emocionantes y desafiantes para recaudar
+      fondos y
+      llamar la atención de la comunidad. A medida que trabajan en equipo, no solo descubren nuevas habilidades y
+      pasiones,
+      sino que también revelan secretos y relaciones ocultas del pasado.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
