Add chapter 2 of season 7

--- a/season07.html
+++ b/season07.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -20,6 +20,17 @@
       desarrolla en un mundo postapocalíptico. La historia sigue a un grupo diverso de sobrevivientes, cada uno con su
       propia
       historia y habilidades, mientras luchan por encontrar un refugio seguro en medio de un brote global de zombies.
+    </p>
+  </section>
+  <section>
+    <h2>Capítulo 2: Mueve el cerebro</h2>
+    <p>
+      Después de que un experimento científico mal concebido desencadena un virus mortal que convierte a las personas en
+      feroces no muertos, la civilización se desmorona rápidamente. Los sobrevivientes, liderados por Sarah, una
+      valiente
+      exmilitar, se ven obligados a dejar sus diferencias de lado y colaborar para enfrentar la amenaza de los zombies
+      que
+      acechan en cada esquina.
     </p>
   </section>
   <h3><a href="index.html">Volver</a></h3>
