Add chapter 3 of season 7

--- a/season07.html
+++ b/season07.html
@@ -33,6 +33,15 @@
       acechan en cada esquina.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 3: Una aventura de muerte</h2>
+    <p>
+      El grupo se aventura en una peligrosa búsqueda en busca de una legendaria instalación militar que se rumorea es un
+      refugio seguro para la humanidad. En su viaje, enfrentarán hordas de zombies sedientos de sangre, traiciones
+      inesperadas
+      y la constante amenaza de la muerte.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
