Add chapter 2 of season 8

--- a/season08.html
+++ b/season08.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -20,6 +20,15 @@
       pasiones. La historia sigue a Olivia y Lucas, dos almas solitarias que se cruzan en el pintoresco pueblo costero
       de
       Sunset Bay.
+    </p>
+  </section>
+  <section>
+    <h2>Capítulo 2: Empalago</h2>
+    <p>
+      Olivia, una talentosa fotógrafa que ha perdido su inspiración, decide pasar el verano en Sunset Bay buscando la
+      tranquilidad y la belleza de la naturaleza para recuperar su creatividad. Lucas, un carismático chef que ha
+      renunciado
+      al amor después de una relación fallida, dirige un encantador restaurante frente al mar en el mismo pueblo.
     </p>
   </section>
   <h3><a href="index.html">Volver</a></h3>
