Add chapter 3 of season 8

--- a/season08.html
+++ b/season08.html
@@ -23,12 +23,23 @@
     </p>
   </section>
   <section>
-    <h2>Capítulo 2: Empalago</h2>
+    <h2>Capítulo 2: La fotografía</h2>
     <p>
       Olivia, una talentosa fotógrafa que ha perdido su inspiración, decide pasar el verano en Sunset Bay buscando la
       tranquilidad y la belleza de la naturaleza para recuperar su creatividad. Lucas, un carismático chef que ha
       renunciado
       al amor después de una relación fallida, dirige un encantador restaurante frente al mar en el mismo pueblo.
+    </p>
+  </section>
+  <section>
+    <h2>Capítulo 3: La playa</h2>
+    <p>
+      Cuando Olivia y Lucas se conocen, hay una chispa instantánea, pero ambos están cargados de cicatrices emocionales.
+      Con
+      el telón de fondo de las hermosas puestas de sol en la playa y el sonido de las olas rompiendo en la distancia,
+      comienzan a compartir momentos especiales juntos. A medida que su amistad crece, descubren que pueden sanar
+      mutuamente
+      sus corazones heridos y comenzar a creer en el amor nuevamente.
     </p>
   </section>
   <h3><a href="index.html">Volver</a></h3>
