Add chapter 2 of season 9

--- a/season09.html
+++ b/season09.html
@@ -23,6 +23,15 @@
       vida.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 2: La ardilla molona</h2>
+    <p>
+      Un día, mientras exploraba el bosque cerca de su casa, Lily descubre un portal mágico que la lleva al Bosque
+      Encantado.
+      Allí, conoce a un grupo de adorables animales que se han convertido en sus amigos: Roco el zorro, Bella la lechuza
+      sabia, Toby el conejo travieso y Luna, una mariposa luminosa.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
