Add chapter 3 of season 9

--- a/season09.html
+++ b/season09.html
@@ -32,6 +32,16 @@
       sabia, Toby el conejo travieso y Luna, una mariposa luminosa.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 3: La melena del elefante</h2>
+    <p>
+      Juntos, Lily y sus nuevos amigos se embarcan en una misión para salvar el Bosque Encantado de una amenaza que lo
+      acecha.
+      A lo largo de su viaje, enfrentan desafíos emocionantes, resuelven acertijos y aprenden valiosas lecciones sobre
+      el
+      respeto por la naturaleza y la importancia de la amistad.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
