Add chapter 2 of season 10

--- a/season10.html
+++ b/season10.html
@@ -22,6 +22,16 @@
       agotamiento de recursos y catastróficos desastres naturales.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 2: Chiwi</h2>
+    <p>
+      En este contexto, la humanidad se embarca en una misión audaz para encontrar un nuevo hogar en el vasto y
+      misterioso
+      espacio exterior. La película sigue a un equipo de astronautas y científicos valientes, liderados por la intrépida
+      comandante Alex Mercer, mientras viajan a bordo de la nave espacial "Estrella Aurora" en busca de un planeta
+      habitable.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
