Add chapter 3 of season 10

--- a/season10.html
+++ b/season10.html
@@ -32,6 +32,17 @@
       habitable.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 3: Yodín el chiquitín</h2>
+    <p>
+      A medida que atraviesan el cosmos, los exploradores se enfrentan a peligros cósmicos, desde asteroides mortales
+      hasta
+      tormentas de radiación, mientras luchan contra la soledad y el aislamiento del espacio profundo. Pero también
+      hacen
+      descubrimientos asombrosos, como planetas exóticos, vida extraterrestre y maravillas cósmicas que desafían la
+      imaginación.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
