Add chapter 2 of season 11

--- a/season11.html
+++ b/season11.html
@@ -24,6 +24,16 @@
       sorprendentes.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 2: Las pisadas</h2>
+    <p>
+      La expedición es liderada por el carismático Dr. David Foster, un paleontólogo visionario, y su intrépida hija,
+      Emma,
+      quien comparte su amor por los dinosaurios. Equipados con tecnología de vanguardia, el equipo descubre un portal
+      temporal que los transporta a un mundo prehistórico lleno de especies de dinosaurios que se creían extintas hace
+      millones de años.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
