Add chapter 3 of season 11

--- a/season11.html
+++ b/season11.html
@@ -34,6 +34,16 @@
       millones de años.
     </p>
   </section>
+  <section>
+    <h2>Capítulo 3: Rugidos</h2>
+    <p>
+      Mientras exploran este asombroso reino perdido, el equipo se encuentra cara a cara con criaturas colosales, como
+      el
+      majestuoso Tiranosaurio Rex y el pacífico Braquiosaurio. Pero también descubren que la supervivencia en este mundo
+      es un
+      desafío constante, ya que deben enfrentarse a depredadores feroces y condiciones climáticas extremas.
+    </p>
+  </section>
   <h3><a href="index.html">Volver</a></h3>
 </body>
 
