--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
   </header>
   <main>
     <ul>
-      <li><a href="/season01.html" target="_blank">Temporada 1</a></li>
-      <li><a href="/season02.html" target="_blank">Temporada 2</a></li>
-      <li><a href="/season03.html" target="_blank">Temporada 3</a></li>
-      <li><a href="/season04.html" target="_blank">Temporada 4</a></li>
-      <li><a href="/season05.html" target="_blank">Temporada 5</a></li>
-      <li><a href="/season06.html" target="_blank">Temporada 6</a></li>
-      <li><a href="/season07.html" target="_blank">Temporada 7</a></li>
-      <li><a href="/season08.html" target="_blank">Temporada 8</a></li>
-      <li><a href="/season09.html" target="_blank">Temporada 9</a></li>
-      <li><a href="/season10.html" target="_blank">Temporada 10</a></li>
-      <li><a href="/season11.html" target="_blank">Temporada 11</a></li>
+      <li><a href="/season01.html">Temporada 1</a></li>
+      <li><a href="/season02.html">Temporada 2</a></li>
+      <li><a href="/season03.html">Temporada 3</a></li>
+      <li><a href="/season04.html">Temporada 4</a></li>
+      <li><a href="/season05.html">Temporada 5</a></li>
+      <li><a href="/season06.html">Temporada 6</a></li>
+      <li><a href="/season07.html">Temporada 7</a></li>
+      <li><a href="/season08.html">Temporada 8</a></li>
+      <li><a href="/season09.html">Temporada 9</a></li>
+      <li><a href="/season10.html">Temporada 10</a></li>
+      <li><a href="/season11.html">Temporada 11</a></li>
     </ul>
   </main>
   <footer>&copy;Berti Coders</footer>
